@@ -93,8 +93,10 @@ export(histplothelper)
 export(initSolution)
 export(lowerBound)
 export(naiveperiod)
+export(paramconverter)
 export(partSolutionSpace)
-export(pop)
+export(pop.first)
+export(pop.last)
 export(predatorprey)
 export(predatorprey.plot0)
 export(predatorprey.plot1)
@@ -116,11 +118,14 @@ export(saa.tbyk)
 export(saa.tcte)
 export(saa.texp)
 export(scatterplotlothelper)
+export(searchrow)
 export(show.comp1)
 export(slope)
 export(slopes)
 export(sortSolution)
 export(summarize.comp1)
+export(tabu.getNeighbors)
+export(tabu.istabu)
 export(upperBound)
 export(xmeanci1)
 export(xmeanci2)
