@@ -38,6 +38,11 @@
 abm.acor<- function(objective, options= NULL) {
   ## Handling the heuristic specific options
   options<- OptionsFactory("acor", options)
+  elog.info("Options(%s): %s", options$getType(), options$toString())
+
+  ## --- Adjusting parameter types
+  parameterz<- paramconverter(objective$parameters, options$isDiscrete(), options$getLevels())
+  objective$parameters<- parameterz
 
   ## --- Creating the estimation object for returning results
   estimates<- Estimates$new()
