@@ -44,6 +44,12 @@
 abm.pso<- function(objective, options = NULL) {
   ## Handling the heuristic specific options
   options<- OptionsFactory("pso", options)
+  elog.info("Options(%s): %s", options$getType(), options$toString())
+
+  ## --- Adjusting parameter types
+  parameterz<- paramconverter(objective$parameters, options$isDiscrete(), options$getLevels())
+  objective$parameters<- parameterz
+  print(objective$parameters)
 
   ## --- Creating the estimation object for returning results
   estimates<- Estimates$new()
