@@ -16,6 +16,8 @@
 #'
 #' @field type The configuration type
 #' @field neighborhood The neighborhood function for population methods
+#' @field discrete Flag indicating that and specific algorithm is discrete or continuous
+#' @field nlevelz Default value for generating parameter levels when range is provided, default value is 5
 #' @field container The object holding the configuration otions
 #'
 #' @importFrom methods new
@@ -25,6 +27,8 @@ Options<- setRefClass("Options",
 
   fields = list(
     type = 'ANY',
+    discrete = 'ANY',
+    nlevelz = 'ANY',
     neighborhood = 'ANY',
     container = 'list'
   ),
@@ -34,6 +38,8 @@ Options<- setRefClass("Options",
 
     initialize = function() {
       type<<- 'none'
+      discrete<<- FALSE
+      nlevelz<<- 5
       container<<- list(iterations=500, trace=FALSE)
     },
 
@@ -52,6 +58,22 @@ Options<- setRefClass("Options",
 
     getType = function() {
       type
+    },
+
+    setDiscrete = function(v) {
+      discrete<<- v
+    },
+
+    isDiscrete = function() {
+      discrete
+    },
+
+    setLevels = function(v) {
+      nlevelz<<- v
+    },
+
+    getLevels = function() {
+      nlevelz
     },
 
     setValue = function(k , v) {
@@ -244,10 +266,10 @@ OptionsTS<- setRefClass("OptionsTS", contains = "Options",
 
       callSuper()
       setType("tabu")
-      setValue("N", 1)              ## Number of solutions
+      setDiscrete(TRUE)
+      setValue("N", 25)             ## Neighbor solution size
       setValue("tabu_size", 16)     ## Tabu size
-      setValue("cand_size", 64)     ## Candidate solution size
-      setValue("iterations", 100)   ## Total number of iterations
+      setValue("iterations", 400)   ## Total number of iterations
     }
 
   )
