@@ -1,17 +1,0 @@
-% Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/helper-functions.R
-\name{pop}
-\alias{pop}
-\title{pop}
-\usage{
-pop(x)
-}
-\arguments{
-\item{x}{The element collection}
-}
-\value{
-The element popped
-}
-\description{
-pop an element
-}
